--- a/WpfApp/MainWindow.xaml
+++ b/WpfApp/MainWindow.xaml
@@ -4,83 +4,33 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp"
+        xmlns:properties="clr-namespace:WpfApp.Properties"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
 
-    <DockPanel Background="Gray">
-        <TextBox DockPanel.Dock="Bottom" Margin="10">EditBox</TextBox>
-        <TextBox DockPanel.Dock="Top" Margin="10">EditBox</TextBox>
-        <Grid Background="DarkGray" Margin="10">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <Button Background="Azure" Margin="10" Grid.Column="0">Button</Button>
-            <StackPanel Background="White" Margin="10" Grid.Column="1" VerticalAlignment="Center">
-                <Label Background="Red" Margin="10">Label</Label>
-                <Label Background="Green" Margin="10">Label</Label>
-                <Label Background="Blue" Margin="10">Label</Label>
-            </StackPanel>
-        </Grid>
-    </DockPanel>
-    
-    <!--<DockPanel >
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="auto"/>
+        </Grid.RowDefinitions>
 
-        <Button DockPanel.Dock="Bottom">Dock Bottom</Button>
-        <Button DockPanel.Dock="Left">Dock Left</Button>
-        <Button DockPanel.Dock="Top">Dock Top</Button>
-        <Button DockPanel.Dock="Right">Dock Right</Button>
+        <DataGrid ItemsSource="{Binding People}"
+                  SelectedItem="{Binding SelectedPerson}"
+                  IsReadOnly="True"
+                  AutoGenerateColumns="False">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="{x:Static properties:Resources.FirstName}" Binding="{Binding FirstName}"/>
+                <DataGridTextColumn Header="{x:Static properties:Resources.LastName}" Binding="{Binding LastName}"/>
+                <DataGridTextColumn Header="{x:Static properties:Resources.BirthDate}" Binding="{Binding BirthDate}"/>
+                <DataGridTextColumn Header="{x:Static properties:Resources.Gender}" Binding="{Binding Gender}"/>
+            </DataGrid.Columns>
+        </DataGrid>
 
-        <Grid DockPanel.Dock="Bottom">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="250"/>
-                <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="2*"/>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="250"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="2*"/>
-            </Grid.RowDefinitions>
-
-            <Button Grid.Column="0" Grid.Row="3" Width="150">1</Button>
-            <Button Grid.Column="1" Grid.Row="2" Width="50">2</Button>
-            <Button Grid.Column="2" Grid.Row="1" Width="200" Content="3"/>
-            <Button Grid.Column="3" Grid.Row="0" Width="100" Content="4"/>
-            <Button Grid.Column="2" Grid.Row="4" Grid.ColumnSpan="2" >5</Button>
-            <Button Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" >5</Button>
-            <Label Grid.Column="1" Grid.Row="2"  Content="Label" ></Label>
-            <TextBox Grid.Column="1" Grid.Row="1"></TextBox>
-        </Grid>
-
-
-        <StackPanel Orientation="Horizontal" DockPanel.Dock="Left">
-            <Button>Stack Button</Button>
-            <Button>Stack Button</Button>
-            <Button>Stack Button</Button>
-            <Button>Stack Button</Button>
-            <Button>Stack Button</Button>
-            <Button>Stack Button</Button>
-            <Button>Stack Button</Button>
+        <StackPanel Orientation="Horizontal" Grid.Row="1">
+            <Button Content="{x:Static properties:Resources.Refresh}" Click="Refresh_Click"/>
+            <Button Content="Edit" Click="Edit_Click"/>
         </StackPanel>
-        <WrapPanel Orientation="Vertical"  DockPanel.Dock="Right" Margin="10">
-            <Button>Wrap Button</Button>
-            <Button Background="Red">Wrap Button</Button>
-            <Button>Wrap Button</Button>
-            <Button>Wrap Button</Button>
-            <Button>Wrap Button</Button>
-            <Button>Wrap Button</Button>
-            <Button>Wrap Button</Button>
-        </WrapPanel>
-
-        <Canvas>
-
-            <Button Canvas.Top="200" Canvas.Left="-300" >Canvas Button</Button>
-
-        </Canvas>
         
-    </DockPanel>-->
+    </Grid>
 
 </Window>
